# Con10x

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/src/: Fragment10x.cpp  Fragment10x.hpp  Fragment_map.hpp  IndexReads_Hashed.cpp  IndexReads_Hashed.hpp  IndexReads_Interleaved.cpp  IndexReads_Interleaved.hpp
tools/: CMakeLists.txt
tools/BamExtractor/src/: BamExtractor.cpp
tools/Compare/src/: BamComparator.cpp  Compare_bitset.cpp.old
tools/Con10x/: Fragment10x.hpp
tools/Con10x/src/: Con10x.cpp  Con10x.hpp  main.cpp
tools/GetReads/src/: Fragment10x.hpp  GetReads.cpp
tools/IndexKmers/src/: IndexKmers.cpp  IndexKmers.hpp
tools/IndexReads/src/: IndexReads.cpp
